TD7/src/tal_sqlParser.java
// $ANTLR 3.x /home/donghao/LO17/TD7/tal_sql.g 2018-12-11 21:51:08

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class tal_sqlParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANNEE", "APRES", "ARTICLE", "AVANT", 
		"BULLETIN", "COMBIEN", "CONJ", "DATE", "ENTRE", "INT", "JOURMOI", "JOURMOIANNEE", 
		"MOI", "MOIANNEE", "PARLER", "POINT", "QUI", "RUBRIQUE", "SELECT", "TITRE", 
		"VAR", "WS"
	};
	public static final int EOF=-1;
	public static final int ANNEE=4;
	public static final int APRES=5;
	public static final int ARTICLE=6;
	public static final int AVANT=7;
	public static final int BULLETIN=8;
	public static final int COMBIEN=9;
	public static final int CONJ=10;
	public static final int DATE=11;
	public static final int ENTRE=12;
	public static final int INT=13;
	public static final int JOURMOI=14;
	public static final int JOURMOIANNEE=15;
	public static final int MOI=16;
	public static final int MOIANNEE=17;
	public static final int PARLER=18;
	public static final int POINT=19;
	public static final int QUI=20;
	public static final int RUBRIQUE=21;
	public static final int SELECT=22;
	public static final int TITRE=23;
	public static final int VAR=24;
	public static final int WS=25;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public tal_sqlParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public tal_sqlParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return tal_sqlParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/donghao/LO17/TD7/tal_sql.g"; }



	// $ANTLR start "listerequetes"
	// /home/donghao/LO17/TD7/tal_sql.g:92:1: listerequetes returns [String sql = \"\"] : r= requete POINT ;
	public final String listerequetes() throws RecognitionException {
		String sql =  "";


		Arbre r =null;

		Arbre lr_arbre;
		try {
			// /home/donghao/LO17/TD7/tal_sql.g:93:39: (r= requete POINT )
			// /home/donghao/LO17/TD7/tal_sql.g:94:17: r= requete POINT
			{
			pushFollow(FOLLOW_requete_in_listerequetes1079);
			r=requete();
			state._fsp--;

			match(input,POINT,FOLLOW_POINT_in_listerequetes1081); 

			                                lr_arbre = r;
			                                sql = lr_arbre.sortArbre();
			                        
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return sql;
	}
	// $ANTLR end "listerequetes"



	// $ANTLR start "requete"
	// /home/donghao/LO17/TD7/tal_sql.g:101:1: requete returns [Arbre req_arbre = new Arbre(\"\")] : ( ( SELECT | COMBIEN ) ( ARTICLE | BULLETIN ) | QUI ) (joinarbre= join )? ;
	public final Arbre requete() throws RecognitionException {
		Arbre req_arbre =  new Arbre("");


		ParserRuleReturnScope joinarbre =null;

		Arbre join_arbre; String modele_avant = ""; String modele_apres= "";String modele_group= "";
		try {
			// /home/donghao/LO17/TD7/tal_sql.g:102:110: ( ( ( SELECT | COMBIEN ) ( ARTICLE | BULLETIN ) | QUI ) (joinarbre= join )? )
			// /home/donghao/LO17/TD7/tal_sql.g:103:17: ( ( SELECT | COMBIEN ) ( ARTICLE | BULLETIN ) | QUI ) (joinarbre= join )?
			{
			// /home/donghao/LO17/TD7/tal_sql.g:103:17: ( ( SELECT | COMBIEN ) ( ARTICLE | BULLETIN ) | QUI )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==COMBIEN||LA3_0==SELECT) ) {
				alt3=1;
			}
			else if ( (LA3_0==QUI) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// /home/donghao/LO17/TD7/tal_sql.g:103:18: ( SELECT | COMBIEN ) ( ARTICLE | BULLETIN )
					{
					// /home/donghao/LO17/TD7/tal_sql.g:103:18: ( SELECT | COMBIEN )
					int alt1=2;
					int LA1_0 = input.LA(1);
					if ( (LA1_0==SELECT) ) {
						alt1=1;
					}
					else if ( (LA1_0==COMBIEN) ) {
						alt1=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 1, 0, input);
						throw nvae;
					}

					switch (alt1) {
						case 1 :
							// /home/donghao/LO17/TD7/tal_sql.g:103:19: SELECT
							{
							match(input,SELECT,FOLLOW_SELECT_in_requete1152); 

							                                req_arbre.ajouteFils(new Arbre("select distinct"));
							                        
							}
							break;
						case 2 :
							// /home/donghao/LO17/TD7/tal_sql.g:107:18: COMBIEN
							{
							match(input,COMBIEN,FOLLOW_COMBIEN_in_requete1198); 

							                                req_arbre.ajouteFils(new Arbre("select distinct"));
							                                modele_avant = "count[";
							                                modele_apres = "]";
							                                modele_group= "GROUP BY ";
							                        
							}
							break;

					}

					// /home/donghao/LO17/TD7/tal_sql.g:113:17: ( ARTICLE | BULLETIN )
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==ARTICLE) ) {
						alt2=1;
					}
					else if ( (LA2_0==BULLETIN) ) {
						alt2=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 2, 0, input);
						throw nvae;
					}

					switch (alt2) {
						case 1 :
							// /home/donghao/LO17/TD7/tal_sql.g:113:18: ARTICLE
							{
							match(input,ARTICLE,FOLLOW_ARTICLE_in_requete1220); 

							                                req_arbre.ajouteFils(new Arbre(modele_avant));
							                                req_arbre.ajouteFils(new Arbre("but.fichier"));
							                                req_arbre.ajouteFils(new Arbre(modele_apres));
							                                req_arbre.ajouteFils(new Arbre("FROM titretexte as but JOIN"));
							                        
							}
							break;
						case 2 :
							// /home/donghao/LO17/TD7/tal_sql.g:120:20: BULLETIN
							{
							match(input,BULLETIN,FOLLOW_BULLETIN_in_requete1267); 

							                                req_arbre.ajouteFils(new Arbre(modele_avant));
							                                req_arbre.ajouteFils(new Arbre("but.numero"));
							                                req_arbre.ajouteFils(new Arbre(modele_apres));
							                                req_arbre.ajouteFils(new Arbre("FROM titretexte as but JOIN"));
							                        
							}
							break;

					}

					}
					break;
				case 2 :
					// /home/donghao/LO17/TD7/tal_sql.g:128:19: QUI
					{
					match(input,QUI,FOLLOW_QUI_in_requete1332); 

					                                 req_arbre.ajouteFils(new Arbre("select distinct email FROM email as but JOIN"));
					                         
					}
					break;

			}

			// /home/donghao/LO17/TD7/tal_sql.g:133:17: (joinarbre= join )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( ((LA4_0 >= ANNEE && LA4_0 <= APRES)||(LA4_0 >= AVANT && LA4_0 <= BULLETIN)||LA4_0==CONJ||LA4_0==ENTRE||(LA4_0 >= JOURMOI && LA4_0 <= JOURMOIANNEE)||(LA4_0 >= MOIANNEE && LA4_0 <= PARLER)||LA4_0==RUBRIQUE||(LA4_0 >= TITRE && LA4_0 <= VAR)) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// /home/donghao/LO17/TD7/tal_sql.g:133:18: joinarbre= join
					{
					pushFollow(FOLLOW_join_in_requete2119);
					joinarbre=join();
					state._fsp--;


					                                join_arbre = (joinarbre!=null?((tal_sqlParser.join_return)joinarbre).lepar_arbre:null);
					                                if((joinarbre!=null?((tal_sqlParser.join_return)joinarbre).condition:null) == ""){req_arbre.ajouteFils(new Arbre("["));}
					                                req_arbre.ajouteFils(join_arbre);
					                                if((joinarbre!=null?((tal_sqlParser.join_return)joinarbre).condition:null) == ""){req_arbre.ajouteFils(new Arbre("]"));}
					                                req_arbre.ajouteFils(new Arbre(" ON but.fichier = "+(joinarbre!=null?((tal_sqlParser.join_return)joinarbre).type:null)+".fichier"));
					                                req_arbre.ajouteFils(new Arbre("AND but.numero=", (joinarbre!=null?((tal_sqlParser.join_return)joinarbre).type:null)+".numero "));
					                                 if((joinarbre!=null?((tal_sqlParser.join_return)joinarbre).condition:null) != ""){req_arbre.ajouteFils(new Arbre("AND "+(joinarbre!=null?((tal_sqlParser.join_return)joinarbre).condition:null)));}
					                        
					}
					break;

			}


			                                req_arbre.ajouteFils(new Arbre(";"));
			                        
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return req_arbre;
	}
	// $ANTLR end "requete"


	public static class join_return extends ParserRuleReturnScope {
		public Arbre lepar_arbre = new Arbre("");
		public String type;
		public String condition = "";
	};


	// $ANTLR start "join"
	// /home/donghao/LO17/TD7/tal_sql.g:149:1: join returns [Arbre lepar_arbre = new Arbre(\"\"), String type, String condition = \"\"] : (dateArbre= joindate |rubriqueArbre= joinrubrique |bulletinArbre= joinbulletin |motArbre= joinmot );
	public final tal_sqlParser.join_return join() throws RecognitionException {
		tal_sqlParser.join_return retval = new tal_sqlParser.join_return();
		retval.start = input.LT(1);

		ParserRuleReturnScope dateArbre =null;
		ParserRuleReturnScope rubriqueArbre =null;
		ParserRuleReturnScope bulletinArbre =null;
		ParserRuleReturnScope motArbre =null;

		Arbre arbre;
		try {
			// /home/donghao/LO17/TD7/tal_sql.g:150:37: (dateArbre= joindate |rubriqueArbre= joinrubrique |bulletinArbre= joinbulletin |motArbre= joinmot )
			int alt5=4;
			switch ( input.LA(1) ) {
			case PARLER:
				{
				int LA5_1 = input.LA(2);
				if ( (LA5_1==ANNEE||(LA5_1 >= JOURMOI && LA5_1 <= JOURMOIANNEE)||LA5_1==MOIANNEE) ) {
					alt5=1;
				}
				else if ( (LA5_1==VAR) ) {
					alt5=4;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 5, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case ANNEE:
			case APRES:
			case AVANT:
			case ENTRE:
			case JOURMOI:
			case JOURMOIANNEE:
			case MOIANNEE:
				{
				alt5=1;
				}
				break;
			case RUBRIQUE:
				{
				alt5=2;
				}
				break;
			case BULLETIN:
				{
				alt5=3;
				}
				break;
			case CONJ:
			case TITRE:
			case VAR:
				{
				alt5=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// /home/donghao/LO17/TD7/tal_sql.g:151:9: dateArbre= joindate
					{
					pushFollow(FOLLOW_joindate_in_join2221);
					dateArbre=joindate();
					state._fsp--;


					                        retval.condition = (dateArbre!=null?((tal_sqlParser.joindate_return)dateArbre).condition:null);
					                        retval.type = (dateArbre!=null?((tal_sqlParser.joindate_return)dateArbre).type:null);
					                        arbre = (dateArbre!=null?((tal_sqlParser.joindate_return)dateArbre).lepar_arbre:null);
					                        retval.lepar_arbre.ajouteFils(arbre);
					                
					}
					break;
				case 2 :
					// /home/donghao/LO17/TD7/tal_sql.g:159:9: rubriqueArbre= joinrubrique
					{
					pushFollow(FOLLOW_joinrubrique_in_join2263);
					rubriqueArbre=joinrubrique();
					state._fsp--;


					                        retval.condition = (rubriqueArbre!=null?((tal_sqlParser.joinrubrique_return)rubriqueArbre).condition:null);
					                        retval.type = (rubriqueArbre!=null?((tal_sqlParser.joinrubrique_return)rubriqueArbre).type:null);
					                        arbre = (rubriqueArbre!=null?((tal_sqlParser.joinrubrique_return)rubriqueArbre).lepar_arbre:null);
					                        retval.lepar_arbre.ajouteFils(arbre);
					                
					}
					break;
				case 3 :
					// /home/donghao/LO17/TD7/tal_sql.g:167:9: bulletinArbre= joinbulletin
					{
					pushFollow(FOLLOW_joinbulletin_in_join2305);
					bulletinArbre=joinbulletin();
					state._fsp--;


					                        retval.condition = (bulletinArbre!=null?((tal_sqlParser.joinbulletin_return)bulletinArbre).condition:null);
					                        retval.type = (bulletinArbre!=null?((tal_sqlParser.joinbulletin_return)bulletinArbre).type:null);
					                        arbre = (bulletinArbre!=null?((tal_sqlParser.joinbulletin_return)bulletinArbre).lepar_arbre:null);
					                        retval.lepar_arbre.ajouteFils(arbre);
					                
					}
					break;
				case 4 :
					// /home/donghao/LO17/TD7/tal_sql.g:175:10: motArbre= joinmot
					{
					pushFollow(FOLLOW_joinmot_in_join2349);
					motArbre=joinmot();
					state._fsp--;


					                        retval.condition = (motArbre!=null?((tal_sqlParser.joinmot_return)motArbre).condition:null);
					                        retval.type = (motArbre!=null?((tal_sqlParser.joinmot_return)motArbre).type:null);
					                        arbre = (motArbre!=null?((tal_sqlParser.joinmot_return)motArbre).lepar_arbre:null);
					                        retval.lepar_arbre.ajouteFils(arbre);
					                
					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "join"


	public static class joindate_return extends ParserRuleReturnScope {
		public Arbre lepar_arbre = new Arbre("");
		public String type;
		public String condition = "";
	};


	// $ANTLR start "joindate"
	// /home/donghao/LO17/TD7/tal_sql.g:184:1: joindate returns [Arbre lepar_arbre = new Arbre(\"\"), String type, String condition = \"\"] : ( ( PARLER )? (annee= ANNEE |date= MOIANNEE |date= JOURMOIANNEE |date= JOURMOI ) | ( ENTRE ( (annee1= ANNEE CONJ annee2= ANNEE ) | (moi1= MOI CONJ moi2= MOI ) ) ) | ( (avantapres= AVANT |avantapres= APRES ) (annee= ANNEE |moi= MOI ) ) ) (joinarbre= join )? ;
	public final tal_sqlParser.joindate_return joindate() throws RecognitionException {
		tal_sqlParser.joindate_return retval = new tal_sqlParser.joindate_return();
		retval.start = input.LT(1);

		Token annee=null;
		Token date=null;
		Token annee1=null;
		Token annee2=null;
		Token moi1=null;
		Token moi2=null;
		Token avantapres=null;
		Token moi=null;
		ParserRuleReturnScope joinarbre =null;

		Arbre join_arbre = new Arbre(""); String[] dateTable; Boolean fin = true; String dateCondition = "";
		try {
			// /home/donghao/LO17/TD7/tal_sql.g:185:117: ( ( ( PARLER )? (annee= ANNEE |date= MOIANNEE |date= JOURMOIANNEE |date= JOURMOI ) | ( ENTRE ( (annee1= ANNEE CONJ annee2= ANNEE ) | (moi1= MOI CONJ moi2= MOI ) ) ) | ( (avantapres= AVANT |avantapres= APRES ) (annee= ANNEE |moi= MOI ) ) ) (joinarbre= join )? )
			// /home/donghao/LO17/TD7/tal_sql.g:186:9: ( ( PARLER )? (annee= ANNEE |date= MOIANNEE |date= JOURMOIANNEE |date= JOURMOI ) | ( ENTRE ( (annee1= ANNEE CONJ annee2= ANNEE ) | (moi1= MOI CONJ moi2= MOI ) ) ) | ( (avantapres= AVANT |avantapres= APRES ) (annee= ANNEE |moi= MOI ) ) ) (joinarbre= join )?
			{
			// /home/donghao/LO17/TD7/tal_sql.g:186:9: ( ( PARLER )? (annee= ANNEE |date= MOIANNEE |date= JOURMOIANNEE |date= JOURMOI ) | ( ENTRE ( (annee1= ANNEE CONJ annee2= ANNEE ) | (moi1= MOI CONJ moi2= MOI ) ) ) | ( (avantapres= AVANT |avantapres= APRES ) (annee= ANNEE |moi= MOI ) ) )
			int alt11=3;
			switch ( input.LA(1) ) {
			case ANNEE:
			case JOURMOI:
			case JOURMOIANNEE:
			case MOIANNEE:
			case PARLER:
				{
				alt11=1;
				}
				break;
			case ENTRE:
				{
				alt11=2;
				}
				break;
			case APRES:
			case AVANT:
				{
				alt11=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 11, 0, input);
				throw nvae;
			}
			switch (alt11) {
				case 1 :
					// /home/donghao/LO17/TD7/tal_sql.g:186:10: ( PARLER )? (annee= ANNEE |date= MOIANNEE |date= JOURMOIANNEE |date= JOURMOI )
					{
					// /home/donghao/LO17/TD7/tal_sql.g:186:10: ( PARLER )?
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==PARLER) ) {
						alt6=1;
					}
					switch (alt6) {
						case 1 :
							// /home/donghao/LO17/TD7/tal_sql.g:187:9: PARLER
							{
							match(input,PARLER,FOLLOW_PARLER_in_joindate2411); 
							}
							break;

					}

					// /home/donghao/LO17/TD7/tal_sql.g:189:9: (annee= ANNEE |date= MOIANNEE |date= JOURMOIANNEE |date= JOURMOI )
					int alt7=4;
					switch ( input.LA(1) ) {
					case ANNEE:
						{
						alt7=1;
						}
						break;
					case MOIANNEE:
						{
						alt7=2;
						}
						break;
					case JOURMOIANNEE:
						{
						alt7=3;
						}
						break;
					case JOURMOI:
						{
						alt7=4;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 7, 0, input);
						throw nvae;
					}
					switch (alt7) {
						case 1 :
							// /home/donghao/LO17/TD7/tal_sql.g:189:10: annee= ANNEE
							{
							annee=(Token)match(input,ANNEE,FOLLOW_ANNEE_in_joindate2437); 

							                         dateCondition = "date.annee='"+annee.getText()+"' ";
							                
							}
							break;
						case 2 :
							// /home/donghao/LO17/TD7/tal_sql.g:193:16: date= MOIANNEE
							{
							date=(Token)match(input,MOIANNEE,FOLLOW_MOIANNEE_in_joindate2477); 

							                        dateTable = date.getText().split(" ");
							                        dateCondition = "date.moi='"+dateTable[0]+"' AND date.annee='"+dateTable[1]+"'";
							                
							}
							break;
						case 3 :
							// /home/donghao/LO17/TD7/tal_sql.g:198:16: date= JOURMOIANNEE
							{
							date=(Token)match(input,JOURMOIANNEE,FOLLOW_JOURMOIANNEE_in_joindate2517); 

							                        dateTable = date.getText().split(" ");
							                        dateCondition = "date.jour='"+dateTable[0]+" date.moi='"+dateTable[1]+"' AND date.annee='"+dateTable[2]+"'";
							                
							}
							break;
						case 4 :
							// /home/donghao/LO17/TD7/tal_sql.g:203:16: date= JOURMOI
							{
							date=(Token)match(input,JOURMOI,FOLLOW_JOURMOI_in_joindate2557); 

							                        dateTable = date.getText().split(" ");
							                        dateCondition = "date.jour='"+dateTable[0]+" date.moi='"+dateTable[1];
							                
							}
							break;

					}
